<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/WhiteText"
    tools:context=".GuideListActivity"
    >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/GreenUI"
                    android:minHeight="?android:attr/windowTitleSize"
                    android:theme="?attr/actionBarTheme" />

            <TextView
                android:id="@+id/guideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="141dp"
                android:layout_marginRight="141dp"
                android:gravity="center"
                android:text="@string/guide"
                android:textColor="@color/WhiteText"
                tools:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="34dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_toStartOf="@+id/guideText"
                    android:layout_toLeftOf="@+id/guideText"
                    android:contentDescription="@string/icon_guide"
                    app:srcCompat="@drawable/ic_guide_dark" />

                <ImageButton
                    android:id="@+id/ReturnButton"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/return_arrow"
                    app:srcCompat="@drawable/ic_return" />


        </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>




</LinearLayout>